public/assets/css/custom.css
/* ... */
.radio label,
.checkbox label {
    line-height: 18px;
}

.ccta {
    position: fixed;
    bottom: 15px;
    right: 15px;
    line-height: 64px;
    width: 56px;
    height: 56px;
    z-index: 5;
    box-shadow: 0 8px 17px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19) !important;
}

.ccta i {
    font-size: 22px !important;
}
.ccta:hover {
    opacity: 0.95;
}

.card {
    margin-bottom: 15px;
    box-shadow: none;
}

.btn {
    font-weight: 600;
    box-shadow: none !important;
}

.btn:not(.ccta) {
    height: 40px;
    line-height: 28px;
    border-radius: 4px;
    padding-left: 25px;
    padding-right: 25px;
    vertical-align: middle;
}

.btn.btn-link:hover {
    background: #eee;
}

.chosen-container .chosen-results li.active-result {
    font-size: 17px;
}

.chosen-container-single .chosen-single abbr,
.chosen-container-single .chosen-single abbr:before {
    background: transparent;
}

.chosen-container-single .chosen-single abbr {
    right: 29px;
}

.flot-chart {
    width: calc(100% + 18px);
    height: 150px;
    margin: -20px -10px 0;
    bottom: -10px;
}

.bgm-lightgray {
    background-color: #fafafa !important;
}

.bgm-lightgray2 {
    background-color: #f2f2f2 !important;
}

.bgm-coldwhite {
    background-color: #e7e7e7 !important;
}

.list-group .list-group-item {
    padding: 15px 26px;
}

.card-filter {
    padding: 15px 18px;
}

@media (max-width: 1025px) {
    #main {
        padding-top: 56px;
    }

    .container,
    .container-fluid {
        padding-left: 0px;
        padding-right: 0px;
    }

    .row {
        margin-left: -0px;
        margin-right: -0px;
    }

    .col-lg-1,
    .col-lg-10,
    .col-lg-11,
    .col-lg-12,
    .col-lg-2,
    .col-lg-3,
    .col-lg-4,
    .col-lg-5,
    .col-lg-6,
    .col-lg-7,
    .col-lg-8,
    .col-lg-9,
    .col-md-1,
    .col-md-10,
    .col-md-11,
    .col-md-12,
    .col-md-2,
    .col-md-3,
    .col-md-4,
    .col-md-5,
    .col-md-6,
    .col-md-7,
    .col-md-8,
    .col-md-9,
    .col-sm-1,
    .col-sm-10,
    .col-sm-11,
    .col-sm-12,
    .col-sm-2,
    .col-sm-3,
    .col-sm-4,
    .col-sm-5,
    .col-sm-6,
    .col-sm-7,
    .col-sm-8,
    .col-sm-9,
    .col-xs-1,
    .col-xs-10,
    .col-xs-11,
    .col-xs-12,
    .col-xs-2,
    .col-xs-3,
    .col-xs-4,
    .col-xs-5,
    .col-xs-6,
    .col-xs-7,
    .col-xs-8,
    .col-xs-9 {
        padding-left: 0px;
        padding-right: 0px;
    }

    .table > thead > tr > th:first-child,
    .table > tbody > tr > th:first-child,
    .table > tfoot > tr > th:first-child,
    .table > thead > tr > td:first-child,
    .table > tbody > tr > td:first-child,
    .table > tfoot > tr > td:first-child {
        padding-left: 18px;
    }

    .table > thead > tr > th:last-child,
    .table > tbody > tr > th:last-child,
    .table > tfoot > tr > th:last-child,
    .table > thead > tr > td:last-child,
    .table > tbody > tr > td:last-child,
    .table > tfoot > tr > td:last-child {
        padding-right: 18px;
    }

    .card .card-header {
        padding: 18px 18px;
    }

    .card .card-filter {
        padding: 15px 18px;
    }

    .card .card-body.card-padding {
        padding: 18px 18px;
    }

    .list-group .list-group-item {
        padding: 15px 18px;
    }
}

@media (max-width: 424px) {
    .container,
    .container-fluid {
        padding-left: 5px;
        padding-right: 5px;
    }

    .row {
        margin-left: -5px;
        margin-right: -5px;
    }

    .col-lg-1,
    .col-lg-10,
    .col-lg-11,
    .col-lg-12,
    .col-lg-2,
    .col-lg-3,
    .col-lg-4,
    .col-lg-5,
    .col-lg-6,
    .col-lg-7,
    .col-lg-8,
    .col-lg-9,
    .col-md-1,
    .col-md-10,
    .col-md-11,
    .col-md-12,
    .col-md-2,
    .col-md-3,
    .col-md-4,
    .col-md-5,
    .col-md-6,
    .col-md-7,
    .col-md-8,
    .col-md-9,
    .col-sm-1,
    .col-sm-10,
    .col-sm-11,
    .col-sm-12,
    .col-sm-2,
    .col-sm-3,
    .col-sm-4,
    .col-sm-5,
    .col-sm-6,
    .col-sm-7,
    .col-sm-8,
    .col-sm-9,
    .col-xs-1,
    .col-xs-10,
    .col-xs-11,
    .col-xs-12,
    .col-xs-2,
    .col-xs-3,
    .col-xs-4,
    .col-xs-5,
    .col-xs-6,
    .col-xs-7,
    .col-xs-8,
    .col-xs-9 {
        padding-left: 5px;
        padding-right: 5px;
    }

    .table > thead > tr > th:first-child,
    .table > tbody > tr > th:first-child,
    .table > tfoot > tr > th:first-child,
    .table > thead > tr > td:first-child,
    .table > tbody > tr > td:first-child,
    .table > tfoot > tr > td:first-child {
        padding-left: 12px;
    }

    .table > thead > tr > th:last-child,
    .table > tbody > tr > th:last-child,
    .table > tfoot > tr > th:last-child,
    .table > thead > tr > td:last-child,
    .table > tbody > tr > td:last-child,
    .table > tfoot > tr > td:last-child {
        padding-right: 12px;
    }

    .card .card-header {
        padding: 12px 12px;
    }

    .card .card-filter {
        padding: 1px 12px;
    }

    .card .card-body.card-padding {
        padding: 12px 12px;
    }

    .list-group .list-group-item {
        padding: 10px 12px;
    }
}

.card .card-header h2 {
    color: #000;
}

.card-back-btn {
    float: left;
    margin: -11px 23px 0px 0px;
    /*background: #fff;*/
    color: rgba(55, 71, 76, 1);
    padding: 1px 9px 0 9px;
    border-radius: 50px;
    font-size: 28px;
    line-height: 36px;
}

.card-back-btn:hover,
.card-back-btn:focus,
.card-back-btn:visited:hover,
.card-back-btn:active:hover,
.card-back-btn:focus:hover {
    color: #fff;
    background: rgba(55, 71, 76, 0.7);
}

table.dataTable thead [class*="sorting"] {
    background-position: center right -4px;
}

.vamiddle {
    vertical-align: middle !important;
}

.col-split-2 {
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-count: 2;
    -moz-column-gap: 0;
    -webkit-column-gap: 0;
    column-gap: 0;
}

.m-r-60 {
    margin-right: 60px;
}
/* ... */

